knx-es/mintk/es-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "mintk-issuer"
  name: es-ingress
  namespace: mintk
spec:
  tls:
    - hosts:
        - mintk-es.kernellix.net
      secretName: mintk-es-tls
  rules:
    - host: mintk-es.kernellix.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mintk-es-http
                port:
                  number: 9200
