knx-es/mintk/kb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "mintk-issuer"
    nginx.org/proxy-connect-timeout: "600s"
    nginx.org/proxy-read-timeout: "600s"
    nginx.org/proxy_send_timeout: "600s"
    nginx.org/send_timeout: "600s"
  name: kibana-ingress
spec:
  tls:
    - hosts:
        - mintk-siem.kernellix.net
      secretName: mintk-siem-tls
  rules:
    - host: mintk-siem.kernellix.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mintk-kb-http
                port:
                  number: 5601
